--- a/styles.css
+++ b/styles.css
@@ -171,3 +171,39 @@ footer h2 {
     color: rgba(255, 255, 255, 0.3);
     text-transform: uppercase;
 }
+
+
+@media Screen and (min-width:320px) and (max-width:480px) {
+    .container {
+        width: 325px;
+        background-color: white;
+        padding: 10px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px; 
+    }
+    .top_heading{
+        text-align: center;
+        position: absolute;
+        font-size: 25px;
+        top: 10px;
+        color: rgba(255, 255, 255, 0.3);
+        text-transform: uppercase;
+    }
+    main .options{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        
+    }
+    .options .option{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+    }
+
+}
